# controller/order.go
@@ -6,10 +6,13 @@ import (
 	"fmt"
 	"io/ioutil"
 	"net/http"
+	"strconv"
 
-	"github.com/almanalfaruq/alfarpos-backend/model"
+	orderentity "github.com/almanalfaruq/alfarpos-backend/model/order"
+	userentity "github.com/almanalfaruq/alfarpos-backend/model/user"
 	"github.com/almanalfaruq/alfarpos-backend/util"
 	"github.com/almanalfaruq/alfarpos-backend/util/response"
+	"github.com/gorilla/mux"
 )
 
 type OrderController struct {
@@ -25,17 +28,18 @@ func NewOrderController(conf util.Config, orderService orderServiceIface) *Order
 }
 
 func (c *OrderController) GetAllOrderHandler(w http.ResponseWriter, r *http.Request) {
+	var err error
 	w.Header().Set("Content-Type", "application/json")
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 
-	user, ok := r.Context().Value(model.CTX_USER).(model.User)
+	user, ok := r.Context().Value(userentity.CTX_USER).(userentity.User)
 	if !ok {
 		err := errors.New("Cannot parse user context")
 		response.RenderJSONError(w, http.StatusInternalServerError, err)
 		return
 	}
 
-	if ok := user.HasRole(model.RoleManager, model.RoleAdmin); !ok {
+	if ok := user.HasRole(userentity.RoleManager, userentity.RoleAdmin); !ok {
 		message := "User must be Admin or Manager"
 		response.RenderJSONError(w, http.StatusForbidden, fmt.Errorf(message))
 		return
@@ -57,16 +61,17 @@ func (c *OrderController) GetAllOrderHandler(w http.ResponseWriter, r *http.Requ
 // @Tags order
 // @Accept json
 // @Produce json
-// @Param body body model.Order true "Order with order detail"
-// @Success 200 {object} response.ResponseMapper{data=model.Order} "Return array of product"
+// @Param body body order.Order true "Order with order detail"
+// @Success 200 {object} response.ResponseMapper{data=order.Order} "Return order data"
 // @Failure 404 {object} response.ResponseMapper{data=string} "Return error with message"
 // @Failure 500 {object} response.ResponseMapper{data=string} "Return error with message"
 // @Router /orders [post]
 func (c *OrderController) NewOrderHandler(w http.ResponseWriter, r *http.Request) {
+	var err error
 	w.Header().Set("Content-Type", "application/json")
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 
-	user, ok := r.Context().Value(model.CTX_USER).(model.User)
+	user, ok := r.Context().Value(userentity.CTX_USER).(userentity.User)
 	if !ok {
 		err := errors.New("Cannot parse user context")
 		response.RenderJSONError(w, http.StatusInternalServerError, err)
@@ -86,7 +91,7 @@ func (c *OrderController) NewOrderHandler(w http.ResponseWriter, r *http.Request
 		return
 	}
 
-	var data model.Order
+	var data orderentity.Order
 	err = json.Unmarshal(body, &data)
 	if err != nil {
 		response.RenderJSONError(w, http.StatusInternalServerError, err)
@@ -100,4 +105,34 @@ func (c *OrderController) NewOrderHandler(w http.ResponseWriter, r *http.Request
 	}
 
 	response.RenderJSONSuccess(w, http.StatusOK, order, "Success creating a new order")
+}
+
+func (c *OrderController) GetOrderByIDHandler(w http.ResponseWriter, r *http.Request) {
+	var err error
+
+	w.Header().Set("Content-Type", "application/json")
+	w.Header().Set("Access-Control-Allow-Origin", "*")
+
+	user, ok := r.Context().Value("user").(userentity.User)
+	if !ok {
+		err = errors.New("Cannot parse token")
+		renderJSONError(w, http.StatusBadRequest, err, "Cannot parse token")
+		return
+	}
+
+	if ok := user.HasRole(userentity.RoleManager, userentity.RoleAdmin); !ok {
+		message := "User must be Admin or Manager"
+		renderJSONError(w, http.StatusForbidden, fmt.Errorf(message), message)
+		return
+	}
+
+	vars := mux.Vars(r)
+	id, _ := strconv.ParseInt(vars["id"], 10, 64)
+	orders, err := c.order.GetOneOrder(id)
+	if err != nil {
+		renderJSONError(w, http.StatusInternalServerError, err, fmt.Sprintf("Cannot get order by id: %d", id))
+		return
+	}
+
+	renderJSONSuccess(w, http.StatusOK, orders, fmt.Sprintf("Success getting order by id: %d", id))
 }
