# controller/user.go
@@ -23,8 +23,8 @@ func NewUserController(userService userServiceIface) *UserController {
 // @Description Register new user (TODO: API caller should be a Manager or an Admin)
 // @Tags user
 // @Produce json
-// @Param json body model.User true "These field must be present: username, password, fullname, address, phone, and role_id (1 = Admin; 2 = Manager; 3 = Cashier)"
-// @Success 200 {object} response.ResponseMapper{data=model.User} "Return the new registered user"
+// @Param json body user.User true "These field must be present: username, password, fullname, address, phone, and role_id (1 = Admin; 2 = Manager; 3 = Cashier)"
+// @Success 200 {object} response.ResponseMapper{data=user.User} "Return the new registered user"
 // @Failure 404 {object} response.ResponseMapper{data=string} "Return error with message"
 // @Failure 500 {object} response.ResponseMapper{data=string} "Return error with message"
 // @Router /users/register [post]
@@ -54,7 +54,7 @@ func (c *UserController) RegisterHandler(w http.ResponseWriter, r *http.Request)
 // @Description Endpoint for getting the token for the logged in user
 // @Tags user
 // @Produce json
-// @Param json body model.User true "These field must be present: username, password"
+// @Param json body user.User true "These field must be present: username, password"
 // @Success 200 {object} response.ResponseMapper{data=string} "Return a jwt token to be used for other requests"
 // @Failure 404 {object} response.ResponseMapper{data=string} "Return error with message"
 // @Failure 500 {object} response.ResponseMapper{data=string} "Return error with message"
@@ -71,11 +71,11 @@ func (c *UserController) LoginHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	token, err := c.user.LoginUser(string(body))
+	data, err := c.user.LoginUser(string(body))
 	if err != nil {
 		response.RenderJSONError(w, http.StatusUnauthorized, err)
 		return
 	}
 
-	response.RenderJSONSuccess(w, http.StatusOK, token, "User logged in")
+	response.RenderJSONSuccess(w, http.StatusOK, data, "User logged in")
 }
