# docs/swagger.yaml
@@ -39,58 +39,6 @@ definitions:
       updated_at:
         type: string
     type: object
-  model.Order:
-    properties:
-      amount_paid:
-        example: 150000
-        type: integer
-      created_at:
-        type: string
-      customer:
-        $ref: '#/definitions/model.Customer'
-        type: object
-      customer_id:
-        example: 1
-        type: integer
-      deleted_at:
-        type: string
-      discount:
-        example: 0
-        type: number
-      id:
-        example: 1
-        type: integer
-      invoice:
-        example: 5-9-2020-000001
-        type: string
-      order_details:
-        items:
-          $ref: '#/definitions/model.OrderDetail'
-        type: array
-      payment:
-        $ref: '#/definitions/model.Payment'
-        type: object
-      payment_id:
-        example: 1
-        type: integer
-      ppn:
-        example: 13000
-        type: integer
-      total:
-        example: 130000
-        type: integer
-      total_change:
-        example: 20000
-        type: integer
-      updated_at:
-        type: string
-      user:
-        $ref: '#/definitions/model.User'
-        type: object
-      user_id:
-        example: 1
-        type: integer
-    type: object
   model.OrderDetail:
     properties:
       created_at:
@@ -100,9 +48,6 @@ definitions:
       id:
         example: 1
         type: integer
-      order:
-        $ref: '#/definitions/model.Order'
-        type: object
       order_id:
         example: 1
         type: integer
@@ -110,10 +55,12 @@ definitions:
         $ref: '#/definitions/model.Product'
         type: object
       product_id:
-        example: 1
         type: integer
       quantity:
         example: 2
+        type: integer
+      sell_price:
+        example: 15000
         type: integer
       sub_total:
         example: 5000
@@ -139,8 +86,8 @@ definitions:
   model.Product:
     properties:
       buy_price:
-        example: 10000
-        type: integer
+        example: "10000"
+        type: string
       category:
         $ref: '#/definitions/model.Category'
         type: object
@@ -148,7 +95,7 @@ definitions:
         example: 1
         type: integer
       code:
-        example: unique-code
+        example: "81921872917"
         type: string
       created_at:
         type: string
@@ -166,12 +113,16 @@ definitions:
       name:
         example: product name
         type: string
+      product_prices:
+        items:
+          $ref: '#/definitions/model.ProductPrice'
+        type: array
       quantity:
-        example: 10
-        type: integer
+        example: "10"
+        type: string
       sell_price:
-        example: 15000
-        type: integer
+        example: "15000"
+        type: string
       unit:
         $ref: '#/definitions/model.Unit'
         type: object
@@ -181,8 +132,31 @@ definitions:
       updated_at:
         type: string
     type: object
+  model.ProductPrice:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        example: 1
+        type: integer
+      product_id:
+        type: integer
+      quantity_multiplier:
+        example: 3
+        type: integer
+      sell_price:
+        example: 15000
+        type: integer
+      updated_at:
+        type: string
+    type: object
   model.Unit:
     properties:
+      code:
+        example: KRT40
+        type: string
       created_at:
         type: string
       deleted_at:
@@ -193,10 +167,81 @@ definitions:
       name:
         example: Unit
         type: string
+      total_pcs:
+        example: 1
+        type: integer
       updated_at:
         type: string
     type: object
-  model.User:
+  order.Order:
+    properties:
+      amount_paid:
+        example: 150000
+        type: integer
+      created_at:
+        type: string
+      customer:
+        $ref: '#/definitions/model.Customer'
+        type: object
+      customer_id:
+        example: 1
+        type: integer
+      deleted_at:
+        type: string
+      discount:
+        example: 0
+        type: number
+      id:
+        example: 1
+        type: integer
+      invoice:
+        example: 5-9-2020-000001
+        type: string
+      note:
+        example: This was a pending transaction for specific customer
+        type: string
+      order_details:
+        items:
+          $ref: '#/definitions/model.OrderDetail'
+        type: array
+      payment:
+        $ref: '#/definitions/model.Payment'
+        type: object
+      payment_id:
+        example: 1
+        type: integer
+      ppn:
+        example: 13000
+        type: integer
+      status:
+        type: integer
+      total:
+        example: 130000
+        type: integer
+      total_change:
+        example: 20000
+        type: integer
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/user.User'
+        type: object
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  response.ResponseMapper:
+    properties:
+      code:
+        example: 200
+        type: integer
+      data:
+        type: object
+      message:
+        example: Success getting all products
+        type: string
+    type: object
+  user.User:
     properties:
       address:
         example: Ketaon, Banyudono, Boyolali
@@ -225,17 +270,6 @@ definitions:
         example: cashier
         type: string
     type: object
-  response.ResponseMapper:
-    properties:
-      code:
-        example: 200
-        type: integer
-      data:
-        type: object
-      message:
-        example: Success getting all products
-        type: string
-    type: object
 host: localhost:8080
 info:
   contact:
@@ -260,18 +294,18 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/model.Order'
+          $ref: '#/definitions/order.Order'
       produces:
       - application/json
       responses:
         "200":
-          description: Return array of product
+          description: Return order data
           schema:
             allOf:
             - $ref: '#/definitions/response.ResponseMapper'
             - properties:
                 data:
-                  $ref: '#/definitions/model.Order'
+                  $ref: '#/definitions/order.Order'
               type: object
         "404":
           description: Return error with message
@@ -490,7 +524,7 @@ paths:
         name: json
         required: true
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/user.User'
       produces:
       - application/json
       responses:
@@ -535,7 +569,7 @@ paths:
         name: json
         required: true
         schema:
-          $ref: '#/definitions/model.User'
+          $ref: '#/definitions/user.User'
       produces:
       - application/json
       responses:
@@ -546,7 +580,7 @@ paths:
             - $ref: '#/definitions/response.ResponseMapper'
             - properties:
                 data:
-                  $ref: '#/definitions/model.User'
+                  $ref: '#/definitions/user.User'
               type: object
         "404":
           description: Return error with message
